<resources>
    <string name="app_name">TwitterApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ViewMsgsButton">View All Messages</string>
    <string name="SendMsgButton">Send new message</string>
    <string name="title_activity_view_messages">All Messages</string>
    <string name="Tag">Tag</string>
    <string name="Search">Search</string>

    <string name="title_activity_post_message">Send new message</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="Message">Message</string>
</resources>
