<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.vakz.twitterapp.PostMessageActivity">

    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/author"
        android:id="@+id/author">
    </EditText>
    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/title"
        android:id="@+id/title">
    </EditText>
    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/tag"
        android:id="@+id/tag">
    </EditText>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:singleLine="false"
        android:lines="5"
        android:ems="10"
        android:hint="@string/Message"
        android:id="@+id/body" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitMessage"
        android:text="@string/SendMsgButton"/>


</LinearLayout>
